Add swagger documentation to user handlers
